# Quize2

./: README.md  docker-compose.yaml  dockerfile  generate_data.py  main.py  pyproject.toml
employee_app/: models.py  serializers.py  views.py
employee_app/migrations/: 0001_initial.py  0002_employee_address_employee_date_of_birth_and_more.py
employee_project/: asgi.py  settings.py  urls.py  wsgi.py
